fix white-space overflow issue in variables

--- a/app/styles/variable-plugin.scss
+++ b/app/styles/variable-plugin.scss
@@ -46,7 +46,7 @@
 .ember-node {
   .variable {
     [contenteditable] {
-      white-space: pre-wrap;
+      white-space: break-spaces;
       word-break: break-all;
       word-wrap: break-word;
       outline: 0px;
